[project]
name = "fastapi-orchestrator"
version = "0.2.0"
description = "FastAPI API Orchestrator"
readme = "README.md"
requires-python = ">=3.14" 
dependencies = [
    # Web framework
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "python-multipart==0.0.27",

    # Database
    "sqlalchemy==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",

    # Validation & settings
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.0",

    # Security
    "bcrypt==5.0.0",
    "cryptography==48.0.0",
    "ecdsa==0.19.2",
    "argon2-cffi==25.1.0",
    "web3==7.16.0",

    # Logging
    "structlog==25.5.0",
    "asn1crypto==1.5.1",
]